starspan ChangeLog
$Id$

2007-11-30 (1.0.02)
	- --stats now accepts multiple rasters; each one processed at a time
	- NOTE about the call observer->intersectionFound(OGRFeature* feature)
	  in Traverser::process_feature:
		Particularly in the case of a GeometryCollection, it might be the
		case that this feature is found to be an intersecting one even though
		that no pixel will be found to be intersecting. Observers may in general
		want to confirm the actual intersection by looking at the number of pixels
		that are reported to be intersected.
	
2007-11-19
   	- Option --fields now also accepts "none"
	- Fixed argument check for --RID
	
	
2007-11-16: Carlos Rueda
	** Starting version 1.0.xx **

	- configure.in to version 1.0.01	
	- --report too restrictive about inputs: fixed. 
	
2006-3-25: perrygeo
      - configure.in to version 0.998
      - src/tranverser/polyqt.cc : relative epsilon instead of constant

2006-03-24:  perrygeo
      - Exposed the SUM statistic
      - Removed NoData/Null Values from the stats calculations
      - Calculate two new stats: MEDIAN and NULLS (ie number of nodata
	values)
        
2005-11-17
	tests/misc/LFS/: new code to test LFS

2005-08-18 (0.997)
	- 0.997 created to synchronize the whole thing. 
	
2005-08-17 (0.996)
	- mksrcdist.sh: set DISTDIR to /tmp/DISTDIR-starspan/
	  The problem was that ./reconf on the exported contents was not
	  creating the files depcomp, missing, and install-sh, required
	  for a successfull ./configure; make; ... on the user machine.
	  It seems the reason is that automake finds those files in ../ or
	  ../../ and then doesn't create new copies. I looked for an
	  option to force automake to create those files but didn't find
	  any; so a simple solution is to create the distribution in a
	  different directory not descending from this one.
	
2005-07-04 (0.996)
	Refactoring on management of set of visited pixels (pixset) with
	the goal of optimizing memory usage in the case of big features:
